fix horizontal overflow, update favourites to show as carousel on small screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,7 @@ body {
     padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
     color: var(--bs-card-color);
     border-radius: 0 !important;
+    min-width: 150px;
 }
 
 .weather-card-today {
